--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,13 +1,12 @@
-
 // Custom Theming for Angular Material
+@use '~@angular/material' as mat;
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 
 // This is to be able to theme parts of the app dynamically depending on theme (right now: light or dark)
@@ -27,21 +26,21 @@
 
   @if $is-dark {
     .mat-toolbar.mat-primary {
-      background: mat-color($background, app-bar);
-      color: mat-color($foreground, text);
+      background: mat.get-color-from-palette($background, app-bar);
+      color: mat.get-color-from-palette($foreground, text);
     }
   }
   .drawer-list-item-active {
-    background-color: change-color(mat-color($primary), $alpha: 0.15) !important;
-    color: mat-color($primary) !important;
+    background-color: change-color(mat.get-color-from-palette($primary), $alpha: 0.15) !important;
+    color: mat.get-color-from-palette($primary) !important;
     .mat-list-icon {
-      color: mat-color($primary) !important;
+      color: mat.get-color-from-palette($primary) !important;
     }
   }
 
   .sidenav-list {
     .mat-list-icon {
-      color: mat-color($foreground, icon);
+      color: mat.get-color-from-palette($foreground, icon);
       margin-right: 16px;
     }
   }
@@ -51,29 +50,29 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 
-$light-primary: mat-palette($mat-indigo, 500); // 500 is the base hue of a Material color
+$light-primary: mat.define-palette(mat.$indigo-palette, 500); // 500 is the base hue of a Material color
 
  // The 200 here makes the indigo color lighter
  // Material Design dark themes should use a desaturated versions of primary and accent colors
  // See: https://material.io/design/color/dark-theme.html
-$dark-primary: mat-palette($mat-indigo, 200);
+$dark-primary: mat.define-palette(mat.$indigo-palette, 200);
 
-$light-accent: mat-palette($mat-pink, A200);
-$dark-accent: mat-palette($mat-pink, A100);
+$light-accent: mat.define-palette(mat.$pink-palette, A200);
+$dark-accent: mat.define-palette(mat.$pink-palette, A100);
 
 // The warn palette is optional (defaults to red).
-$light-warn: mat-palette($mat-red); // Without a hue given, it defaults to 500
-$dark-warn: mat-palette($mat-red, 300);
+$light-warn: mat.define-palette(mat.$red-palette); // Without a hue given, it defaults to 500
+$dark-warn: mat.define-palette(mat.$red-palette, 300);
 
 // Create the theme object for a light theme (a Sass map containing all of the palettes).
-$light-theme: mat-light-theme($light-primary, $light-accent, $light-warn);
+$light-theme: mat.define-light-theme($light-primary, $light-accent, $light-warn);
 
 // Create the theme object for a dark theme (a Sass map containing all of the palettes).
-$dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+$dark-theme: mat.define-dark-theme($dark-primary, $dark-accent, $dark-warn);
 
 
 // Sets up the theming for built in material components with the light theme
-@include angular-material-theme($light-theme);
+@include mat.all-component-themes($light-theme);
 
 // Sets up theming for our custom components with the light theme
 @include app-theming($light-theme);
@@ -92,7 +91,7 @@ body {
 // you can also make this a normal class and add it to body or html dynamically.
 @media (prefers-color-scheme: dark) {
   // Sets up the theming for built in material components with the light theme
-  @include angular-material-theme($dark-theme);
+  @include mat.all-component-themes($dark-theme);
   // Sets up theming for our custom components with the light theme
   @include app-theming($dark-theme);
 }
