Explore using rxjs debouncing on the age input field
Currently we call the server on *every* keystroke, which really doesn't make sense for the age field on Users. This is exploring using the rxjs debounce tools to fix that.

--- a/client/src/app/users/user-list.component.html
+++ b/client/src/app/users/user-list.component.html
@@ -29,7 +29,10 @@
           <mat-form-field class="input-field">
             <mat-label>Age</mat-label>
             <input matInput data-test="userAgeInput" type="number" placeholder="Filter by age"
-            min="0" max="200" [(ngModel)]="userAge" (input)="getUsersFromServer()">
+            min="0" max="200"
+            [ngModel]="userAge"
+            (ngModelChange)="this.ageSubject.next($event)"
+            >
             <mat-hint>Filtered on server</mat-hint>
           </mat-form-field>
 
