--- a/client/src/app/users/user-profile.component.html
+++ b/client/src/app/users/user-profile.component.html
@@ -1,5 +1,7 @@
 <div class="flex-row">
-  <div class="flex-1" fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
-    <app-user-card [user]="this.user"></app-user-card>
+  <div class="flex-1" fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10"
+    *ngIf="user; else loading">
+    <app-user-card [user]="user"></app-user-card>
   </div>
 </div>
+<ng-template #loading>Loading User Profile data...</ng-template>
