Update to match iteration template

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,7 +1,14 @@
 <div class="flex-row">
-  <div class="flex-1" fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
-    <mat-card appearance="outlined" class="home-card">
-      This is a home page! It doesn't do anything!
+  <div class="flex-1">
+    <mat-card class="home-card">
+      <mat-card-header>
+        <mat-card-title>
+          Home
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        This is a home page! It doesn't do anything!
+      </mat-card-content>
     </mat-card>
   </div>
 </div>
