--- a/client/src/app/users/add-user.component.html
+++ b/client/src/app/users/add-user.component.html
@@ -1,66 +1,57 @@
 <div class="flex-row">
-  <div class="flex-1" fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
+  <div class="flex-1">
     <form [formGroup]="addUserForm" (ngSubmit)="submitForm();">
-    <mat-card appearance="outlined" class="add-user-card">
+    <mat-card class="add-user-card">
         <mat-card-header>
           <mat-card-title class="add-user-title">New User</mat-card-title>
         </mat-card-header>
-        <mat-card-content class="flex-col">
-          <mat-form-field>
-            <mat-label>Name</mat-label>
-            <input matInput placeholder="Name" formControlName="name"
-                  required>
-            <mat-error *ngFor="let validation of addUserValidationMessages.name">
-              <mat-error class="error-message" data-test="nameError"
-                        *ngIf="addUserForm.get('name').hasError(validation.type) && (addUserForm.get('name').dirty || addUserForm.get('name').touched)">
-                {{validation.message}}
+        <mat-card-content>
+          <div class="flex-col">
+            <mat-form-field>
+              <mat-label>Name</mat-label>
+              <input matInput formControlName="name"
+                    required>
+              <mat-error *ngIf="formControlHasError('name')" data-test="nameError">
+                {{getErrorMessage('name')}}
               </mat-error>
-            </mat-error>
-          </mat-form-field>
+            </mat-form-field>
 
-          <mat-form-field>
-            <mat-label>Age</mat-label>
-            <input matInput type="number" placeholder="Age"
-                  formControlName="age" required>
-            <mat-error *ngFor="let validation of addUserValidationMessages.age">
-              <mat-error class="error-message" data-test="ageError"
-                        *ngIf="addUserForm.get('age').hasError(validation.type) && (addUserForm.get('age').dirty || addUserForm.get('age').touched)">
-                {{validation.message}}
+            <mat-form-field>
+              <mat-label>Age</mat-label>
+              <input matInput type="number"
+                    formControlName="age" required>
+              <mat-error *ngIf="formControlHasError('age')" data-test="ageError">
+                {{getErrorMessage('age')}}
               </mat-error>
-            </mat-error>
-          </mat-form-field>
+            </mat-form-field>
 
-          <mat-form-field>
-            <mat-label>Company</mat-label>
-            <input matInput placeholder="Company"
-                  formControlName="company">
-            <mat-hint>Not required in Angular for demonstration, still required by server</mat-hint>
-          </mat-form-field>
+            <mat-form-field>
+              <mat-label>Company</mat-label>
+              <input matInput formControlName="company">
+              <mat-hint>Not required in Angular for demonstration, still required by server</mat-hint>
+            </mat-form-field>
 
-          <mat-form-field>
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Email"
-                  formControlName="email" required>
-            <mat-error *ngFor="let validation of addUserValidationMessages.email">
-              <mat-error class="error-message" data-test='emailError'
-                        *ngIf="addUserForm.get('email').hasError(validation.type) && (addUserForm.get('email').dirty || addUserForm.get('email').touched)">
-                {{validation.message}}
+            <mat-form-field>
+              <mat-label>Email</mat-label>
+              <input matInput type="email"
+                    formControlName="email" required>
+              <mat-error *ngIf="formControlHasError('email')" data-test="emailError">
+                {{getErrorMessage('email')}}
               </mat-error>
-            </mat-error>
-          </mat-form-field>
+            </mat-form-field>
 
-          <mat-form-field>
-            <mat-label>Role</mat-label>
-            <mat-select required formControlName="role">
-              <mat-option value="admin">Admin</mat-option>
-              <mat-option value="editor">Editor</mat-option>
-              <mat-option value="viewer">Viewer</mat-option>
-            </mat-select>
-            <mat-error *ngIf="addUserForm.get('role').hasError('required')">You must make a selection</mat-error>
-            <mat-error *ngIf="addUserForm.get('role').hasError('pattern') && !addUserForm.get('role').hasError('required')">
-              Your selection is invalid
-            </mat-error>
-          </mat-form-field>
+            <mat-form-field>
+              <mat-label>Role</mat-label>
+              <mat-select required formControlName="role">
+                <mat-option value="admin">Admin</mat-option>
+                <mat-option value="editor">Editor</mat-option>
+                <mat-option value="viewer">Viewer</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formControlHasError('role')" data-test="roleError">
+                {{getErrorMessage('role')}}
+              </mat-error>
+            </mat-form-field>
+          </div>
 
         </mat-card-content>
         <mat-card-actions align="end">
