--- a/client/src/app/users/user-profile.component.html
+++ b/client/src/app/users/user-profile.component.html
@@ -1,6 +1,30 @@
 <div class="flex-row">
-  <div class="flex-1" *ngIf="user; else loading">
-    <app-user-card [user]="this.user"></app-user-card>
+  <div class="flex-1">
+    @if (user) {
+      <app-user-card [user]="this.user"></app-user-card>
+    } @else if (error) {
+      <mat-card class="error-card">
+        <mat-card-content>
+          <h2>
+            {{ error.help }}
+          </h2>
+          <p>
+            {{ error.message }}
+          </p>
+          <p>
+            {{ error.httpResponse }}
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button color=primary mat-raised-button routerLink="/users">Back to Users List</button>
+        </mat-card-actions>
+      </mat-card>
+    } @else {
+      <mat-card>
+        <mat-card-content>
+          <p>Loading User Profile data...</p>
+        </mat-card-content>
+      </mat-card>
+    }
   </div>
 </div>
-<ng-template #loading>Loading User Profile data...</ng-template>
