--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -18,6 +18,11 @@
         Users
       </a>
 
+      <a mat-list-item routerLink="/companies" routerLinkActive="drawer-list-item-active"
+      (click)="drawer.close()">
+        <mat-icon matListItemIcon>business</mat-icon>
+        Companies
+      </a>
     </mat-nav-list>
   </mat-sidenav>
 
