Incorporate Michael Small's improvements
These bring in a host of improvements that @michael-small provided for the iteration template.

Most of these get us so we're using signals properly, but there are some other small cleanups as well.

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -29,7 +29,7 @@
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       <button type="button" aria-label="Toggle sidenav" mat-icon-button
-      (click)="drawer.toggle()" onclick="this.blur()" class="sidenav-button">
+      (click)="drawer.toggle()" onclick="blur()" class="sidenav-button">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span class="app-title">{{title}}</span>
